--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 <!-- THIRD SECTION: BOXES -->
   <section class="section-two" id="section-two-boxes">
     <h3> ABOUT US </h3>
-    <div>
+    <div class="box-container">
       <article class="box">
         <h5> Find museums </h5>
         <br />
