added animations and fixed some style issues.

--- a/singin.html
+++ b/singin.html
@@ -65,18 +65,20 @@
           <label for="password"> Password </label>
           <input type="password" name="password" id="password" placeholder="Enter your password">
         </div>
-
-        <br />
-        <br />
-        <p>Don't have an account? <a class="a-login" href="register.html">Sign up here.</a></p>
         
-         <div class="login-form"></div>
+         <div class="login-form">
           <button type="submit" class="login-button" id="login-button"> Log In </button>
+        </div>
+
+        <div class="login-form">
+          <br />
+          <p>Don't have an account? <a class="a-login" href="register.html">Sign up here.</a></p>
         </div>
 
         <div class="message-container">
         </div>
-
+        
+      </form>
     </article> 
   </div>
 </section>
