Added a new section and fixed some problems

--- a/artwork.html
+++ b/artwork.html
@@ -40,6 +40,9 @@
         <a class="nav-link" href="#"> ARTWORK OF THE DAY </a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="country.html"> SEARCH FOR PIECES OF ART </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="faq.html"> FAQ </a>
       </li>
       <li class="nav-item">
@@ -59,14 +62,6 @@
 
   </section>
 </div>
-
-
-<!-- FOUR SECTION: FOOTER -->
-<footer class="page-footer font-small blue">
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="#">ARTNOW.</a> Barcelona, Spain.
-    </div>
-</footer>
 
 <!-- JAVASCRIPT DOCUMENTS -->
 <script src="js/metApi.js"></script>
