--- a/faq.html
+++ b/faq.html
@@ -41,6 +41,9 @@
         <a class="nav-link" href="artwork.html"> ARTWORK OF THE DAY </a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="country.html"> SEARCH FOR PIECES OF ART </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="#"> FAQ </a>
       </li>
       <li class="nav-item">
@@ -70,7 +73,7 @@
     </article>     
     
      <article class="box-faq shadow-drop-2-center">        
-      <h4> I had problems registering </h4>
+      <h4> I can't sign in to my account </h4>
       <p> We are a new platform, which means that we can still have some bugs. We ask you to be patient. </p>
     </article>     
     
@@ -78,6 +81,11 @@
       <h4> The "Artwork of the day" section does not work </h4>
       <p> We work with the API from the Metropolitan Museum of Art, which has a limit of requests. This may be one of the reasons why it is not working correctly sometimes. </p>
     </article>     
+
+    <article class="box-faq shadow-drop-2-center">        
+      <h4> The "Search for pieces of art by country or city" section does not work </h4>
+      <p> We currently work with the API from the Metropolitan Museum of Art, they have a large database, but perhaps you may enter a country or a city and they may not have artworks from that country. </p>
+    </article>  
   </div>
 </section>
 
