--- a/index.html
+++ b/index.html
@@ -42,6 +42,9 @@
         <a class="nav-link" href="artwork.html"> ARTWORK OF THE DAY </a>
       </li>
       <li class="nav-item">
+        <a class="nav-link" href="country.html"> SEARCH FOR PIECES OF ART </a>
+      </li>
+      <li class="nav-item">
         <a class="nav-link" href="faq.html"> FAQ </a>
       </li>
       <li class="nav-item">
