added new pictures and fixed a few responsive css problems

--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
 
 <!-- THIRD SECTION: BOXES -->
   <section class="section-two" id="section-two-boxes">
+    <div class="text-index">
     <h3> ABOUT US </h3>
+  </div>
+  
     <div class="box-container">
       <article class="box">
         <h5> Find museums </h5>
