--- a/singin.html
+++ b/singin.html
@@ -46,7 +46,7 @@
         <a class="nav-link" href="faq.html"> FAQ </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#"> LOGIN </a>
+        <a class="nav-link" href="#"> LOG IN </a>
       </li>
     </ul>
   </div>
@@ -60,8 +60,8 @@
       <form class="form-login-container" action="#" method="get">
         
         <div class="login-form">
-          <label for="email"> Email or username </label>
-          <input type="email" name="email" id="email" placeholder="Enter your email or username">
+          <label for="email"> Email </label>
+          <input type="email" name="email" id="email" placeholder="Enter your email">
         </div>
         
          <div class="login-form">
