added new styles

--- a/country.html
+++ b/country.html
@@ -60,7 +60,7 @@
       <form class="search-container" action="#" method="get">
         
       <div class="text-country">
-        <p> Whenever you are looking for a country or a city you will get a piece of art from that place. </p>
+        <p> Whenever you are looking for a country or a city, you will get a piece of art from an artist from that place. </p>
       </div>
 
       <div class="search">
@@ -80,13 +80,6 @@
 
   </section>
 </div>
-
-<!-- FOUR SECTION: FOOTER -->
-  <footer class="page-footer font-small blue">
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="#">ARTNOW.</a> Barcelona, Spain.
-    </div>
-  </footer>
 
 <!-- JAVASCRIPT DOCUMENTS -->
 <script src="js/countryApi.js"></script>
