footer problems solved in all sections

--- a/artwork.html
+++ b/artwork.html
@@ -56,11 +56,19 @@
 <section class="section-one-artwork" id="section-one-box-artwork">
 </section>
 
-
+<div class="container-footer">
 <div class="container">
   <section class="met">
 
   </section>
+</div>
+
+<!-- FOUR SECTION: FOOTER -->
+
+<footer>
+  <p>ARTNOW<br />
+  BARCELONA, SPAIN</p>
+</footer>
 </div>
 
 <!-- JAVASCRIPT DOCUMENTS -->
