--- a/country.html
+++ b/country.html
@@ -52,7 +52,7 @@
   </div>
 </nav>
 
-<!-- THIRD SECTION: COUNTRIES SECTION -->
+<!-- SECOND SECTION: COUNTRIES SECTION -->
 <section class="section-one-search" id="section-one-box-search">
     <h3> SEARCH FOR PIECES OF ART BY COUNTRY OR CITY </h3>
     <div>
@@ -75,10 +75,18 @@
     </div>
 </section>
 
+<div class="container-footer">
 <div class="container">
   <section class="met">
 
   </section>
+</div>
+
+<!-- THIRD SECTION: FOOTER -->
+<footer>
+  <p>ARTNOW<br />
+  BARCELONA, SPAIN</p>
+</footer>
 </div>
 
 <!-- JAVASCRIPT DOCUMENTS -->
