--- a/madrid.html
+++ b/madrid.html
@@ -100,11 +100,10 @@
 </section>
 
 <!-- FOUR SECTION: FOOTER -->
-  <footer class="page-footer font-small blue">
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="#">ARTNOW.</a> Barcelona, Spain.
-    </div>
-  </footer>
+<footer>
+  <p>ARTNOW<br />
+  BARCELONA, SPAIN</p>
+</footer>
 
 <!-- Primero jQuery, segundo Popper.js, tercero Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
