--- a/register.html
+++ b/register.html
@@ -96,10 +96,9 @@
 </section>
 
 <!-- THIRD SECTION: FOOTER -->
-<footer class="page-footer font-small blue">
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="#">ARTNOW.</a> Barcelona, Spain.
-    </div>
+<footer>
+  <p>ARTNOW<br />
+  BARCELONA, SPAIN</p>
 </footer>
 
 <!-- JAVASCRIPT DOCUMENTS -->
