--- a/index.html
+++ b/index.html
@@ -107,11 +107,10 @@
   </section>
 
 <!-- FOUR SECTION: FOOTER -->
-  <footer class="page-footer font-small blue">
-    <div class="footer-copyright text-center py-3">© 2020 Copyright:
-      <a href="#">ARTNOW.</a> Barcelona, Spain.
-    </div>
-  </footer>
+<footer>
+  <p>ARTNOW<br />
+  BARCELONA, SPAIN</p>
+</footer>
 
 <!-- Primero jQuery, segundo Popper.js, tercero Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
