added a new background in log in and sign up sections

--- a/register.html
+++ b/register.html
@@ -53,8 +53,10 @@
 </nav>
 
 <!-- SECOND SECTION: REGISTER -->
+<div class="signupimage">
+
 <section class="section-one-register" id="section-one-box-register">
-  <h3> SIGN UP </h3>
+  <h3 class="logintext"> SIGN UP </h3>
 
   <div>
     <article class="box-register">
@@ -84,8 +86,10 @@
           <button type="submit" class="button" id="singup-button"> Sign Up </button>
         </div>
 
+        <div class="register-form">
         <br />
         <p>Already have an account?<a class="singup-button" id="singup-button" href="singin.html"> Log in.</a></p>
+        </div>
 
         <div class="message-container">
         </div>
@@ -96,10 +100,12 @@
 </section>
 
 <!-- THIRD SECTION: FOOTER -->
-<footer>
+<footer class="loginfooter">
   <p>ARTNOW<br />
   BARCELONA, SPAIN</p>
 </footer>
+
+</div>
 
 <!-- JAVASCRIPT DOCUMENTS -->
 <script src="js/database.js"></script>
