--- a/singin.html
+++ b/singin.html
@@ -53,8 +53,10 @@
 </nav>
 
 <!-- SECOND SECTION: LOG IN -->
+<div class="loginimage">
+
 <section class="section-one-login" id="section-one-box-register">
-  <h3> LOG IN </h3>
+  <h3 class="logintext"> LOG IN </h3>
   <div>
     <article class="box-login">
       <form class="form-login-container" action="#" method="get">
@@ -86,11 +88,14 @@
   </div>
 </section>
 
+
+
 <!-- THIRD SECTION: FOOTER -->
-<footer>
+<footer class="loginfooter">
   <p>ARTNOW<br />
   BARCELONA, SPAIN</p>
 </footer>
+</div>
 
 <!-- JAVASCRIPT DOCUMENTS -->
 <script src="js/user.js"></script>
